--- a/HospitalMap/Info.plist
+++ b/HospitalMap/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>현재 위치 확인을 위해 권한이 필요합니다.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>현재 위치 확인을 위해 권한이 필요합니다.</string>
 	<key>KAKAO_APP_KEY</key>
 	<string>2cd6ba925187026280a21dcabaf3e34a</string>
 	<key>CFBundleDevelopmentRegion</key>
